# mini-sedric

./: .flake8  .gitignore  README.md  init-aws.sh  pyproject.toml
.github/workflows/: python-app.yml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
infra/: .terraform.lock.hcl  main.tf  variables.tf
mini_sedric/: config.py  main.py  settings.toml
mini_sedric/models/: __init__.py  models.py
mini_sedric/s3_integration/: __init__.py  clients.py  connection.py  exceptions.py  interface.py
mini_sedric/transcribe_service/: __init__.py  client.py  connection.py  exceptions.py  interface.py
mini_sedric/usecases/: __init__.py  exceptions.py  extractor.py  s3_usecases.py  transcript_job.py
scripts/: scripts.py
tests/: conftest.py  test_main.py
tests/unit/: test_extractor.py  test_transcribe_worker.py
tests/usecases/: test_s3_usecases.py
