[tool.poetry]
name = "mini-sedric"
version = "0.1.0"
description = ""
authors = ["Wojtek Warych <woj.warych@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
pylint = "^3.2.3"
autoflake = "^2.3.1"
pytest = "^8.2.2"
trio = "^0.25.1"

[tool.poetry.scripts]
format = "scripts.scripts:format"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
